--- a/Data_Analysis/2-Pandas/Practica/2-Chipotle/Chipotle.ipynb
+++ b/Data_Analysis/2-Pandas/Practica/2-Chipotle/Chipotle.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "4  [Tomatillo-Red Chili Salsa (Hot), [Black Beans...    $16.98   "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "'$9.39 '"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "[4622 rows x 6 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
        "44.25"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "3598    $44.25    44.25  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
        "1229        11.89  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        " 'Chicken Salad']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +857,7 @@
        "[4622 rows x 7 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
        "3750                         Carnitas Salad         8.99"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,7 +1223,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chipo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1415,7 +1424,7 @@
        "[4622 rows x 7 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,17 +1443,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>choice_description</th>\n",
+       "      <th>item_price</th>\n",
+       "      <th>numero</th>\n",
+       "      <th>precio_unit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2442</th>\n",
+       "      <td>970</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Barbacoa Salad Bowl</td>\n",
+       "      <td>[Tomatillo Green Chili Salsa, [Rice, Fajita Ve...</td>\n",
+       "      <td>$11.89</td>\n",
+       "      <td>11.89</td>\n",
+       "      <td>11.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2957</th>\n",
+       "      <td>1176</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Steak Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Black Beans, Cheese, Gua...</td>\n",
+       "      <td>$11.89</td>\n",
+       "      <td>11.89</td>\n",
+       "      <td>11.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>613</th>\n",
+       "      <td>253</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Steak Salad Bowl</td>\n",
+       "      <td>[Tomatillo Red Chili Salsa, [Fajita Vegetables...</td>\n",
+       "      <td>$23.78</td>\n",
+       "      <td>23.78</td>\n",
+       "      <td>11.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2401</th>\n",
+       "      <td>953</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Steak Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Guaca...</td>\n",
+       "      <td>$11.89</td>\n",
+       "      <td>11.89</td>\n",
+       "      <td>11.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>281</th>\n",
+       "      <td>123</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Steak Salad Bowl</td>\n",
+       "      <td>[Tomatillo Red Chili Salsa, [Black Beans, Chee...</td>\n",
+       "      <td>$23.78</td>\n",
+       "      <td>23.78</td>\n",
+       "      <td>11.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>378</th>\n",
+       "      <td>164</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Canned Soda</td>\n",
+       "      <td>[Mountain Dew]</td>\n",
+       "      <td>$1.09</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>1.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1805</th>\n",
+       "      <td>730</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Canned Soda</td>\n",
+       "      <td>[Sprite]</td>\n",
+       "      <td>$1.09</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>1.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2520</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Canned Soda</td>\n",
+       "      <td>[Coca Cola]</td>\n",
+       "      <td>$1.09</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>1.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2981</th>\n",
+       "      <td>1186</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bottled Water</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$1.09</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>1.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>646</th>\n",
+       "      <td>267</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Canned Soda</td>\n",
+       "      <td>[Sprite]</td>\n",
+       "      <td>$1.09</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>1.09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4622 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      order_id  quantity            item_name  \\\n",
+       "2442       970         1  Barbacoa Salad Bowl   \n",
+       "2957      1176         1     Steak Salad Bowl   \n",
+       "613        253         2     Steak Salad Bowl   \n",
+       "2401       953         1     Steak Salad Bowl   \n",
+       "281        123         2     Steak Salad Bowl   \n",
+       "...        ...       ...                  ...   \n",
+       "378        164         1          Canned Soda   \n",
+       "1805       730         1          Canned Soda   \n",
+       "2520      1001         1          Canned Soda   \n",
+       "2981      1186         1        Bottled Water   \n",
+       "646        267         1          Canned Soda   \n",
+       "\n",
+       "                                     choice_description item_price  numero  \\\n",
+       "2442  [Tomatillo Green Chili Salsa, [Rice, Fajita Ve...    $11.89    11.89   \n",
+       "2957  [Fresh Tomato Salsa, [Black Beans, Cheese, Gua...    $11.89    11.89   \n",
+       "613   [Tomatillo Red Chili Salsa, [Fajita Vegetables...    $23.78    23.78   \n",
+       "2401  [Fresh Tomato Salsa, [Fajita Vegetables, Guaca...    $11.89    11.89   \n",
+       "281   [Tomatillo Red Chili Salsa, [Black Beans, Chee...    $23.78    23.78   \n",
+       "...                                                 ...        ...     ...   \n",
+       "378                                      [Mountain Dew]     $1.09     1.09   \n",
+       "1805                                           [Sprite]     $1.09     1.09   \n",
+       "2520                                        [Coca Cola]     $1.09     1.09   \n",
+       "2981                                                NaN     $1.09     1.09   \n",
+       "646                                            [Sprite]     $1.09     1.09   \n",
+       "\n",
+       "      precio_unit  \n",
+       "2442        11.89  \n",
+       "2957        11.89  \n",
+       "613         11.89  \n",
+       "2401        11.89  \n",
+       "281         11.89  \n",
+       "...           ...  \n",
+       "378          1.09  \n",
+       "1805         1.09  \n",
+       "2520         1.09  \n",
+       "2981         1.09  \n",
+       "646          1.09  \n",
+       "\n",
+       "[4622 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chipo.sort_values('precio_unit', ascending=False)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'False: boolean label can not be used without a boolean index'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\laura\\Desktop\\DS_PT_09_2023\\Data_Analysis\\2-Pandas\\Practica\\2-Chipotle\\Chipotle.ipynb Cell 27\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/laura/Desktop/DS_PT_09_2023/Data_Analysis/2-Pandas/Practica/2-Chipotle/Chipotle.ipynb#X35sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m chipo\u001b[39m.\u001b[39;49mloc[(\u001b[39m'\u001b[39;49m\u001b[39mitem_name\u001b[39;49m\u001b[39m'\u001b[39;49m \u001b[39m==\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39mBarbacoa Salad Bowl\u001b[39;49m\u001b[39m'\u001b[39;49m)]\n",
+      "File \u001b[1;32mc:\\Users\\laura\\Desktop\\DS_PT_09_2023\\.venv\\Lib\\site-packages\\pandas\\core\\indexing.py:1153\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1150\u001b[0m axis \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maxis \u001b[39mor\u001b[39;00m \u001b[39m0\u001b[39m\n\u001b[0;32m   1152\u001b[0m maybe_callable \u001b[39m=\u001b[39m com\u001b[39m.\u001b[39mapply_if_callable(key, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj)\n\u001b[1;32m-> 1153\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_getitem_axis(maybe_callable, axis\u001b[39m=\u001b[39;49maxis)\n",
+      "File \u001b[1;32mc:\\Users\\laura\\Desktop\\DS_PT_09_2023\\.venv\\Lib\\site-packages\\pandas\\core\\indexing.py:1392\u001b[0m, in \u001b[0;36m_LocIndexer._getitem_axis\u001b[1;34m(self, key, axis)\u001b[0m\n\u001b[0;32m   1389\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39miloc[\u001b[39mtuple\u001b[39m(indexer)]\n\u001b[0;32m   1391\u001b[0m \u001b[39m# fall thru to straight lookup\u001b[39;00m\n\u001b[1;32m-> 1392\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_key(key, axis)\n\u001b[0;32m   1393\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_label(key, axis\u001b[39m=\u001b[39maxis)\n",
+      "File \u001b[1;32mc:\\Users\\laura\\Desktop\\DS_PT_09_2023\\.venv\\Lib\\site-packages\\pandas\\core\\indexing.py:1201\u001b[0m, in \u001b[0;36m_LocIndexer._validate_key\u001b[1;34m(self, key, axis)\u001b[0m\n\u001b[0;32m   1194\u001b[0m ax \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39m_get_axis(axis)\n\u001b[0;32m   1195\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, \u001b[39mbool\u001b[39m) \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m (\n\u001b[0;32m   1196\u001b[0m     is_bool_dtype(ax\u001b[39m.\u001b[39mdtype)\n\u001b[0;32m   1197\u001b[0m     \u001b[39mor\u001b[39;00m ax\u001b[39m.\u001b[39mdtype\u001b[39m.\u001b[39mname \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mboolean\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1198\u001b[0m     \u001b[39mor\u001b[39;00m \u001b[39misinstance\u001b[39m(ax, MultiIndex)\n\u001b[0;32m   1199\u001b[0m     \u001b[39mand\u001b[39;00m is_bool_dtype(ax\u001b[39m.\u001b[39mget_level_values(\u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mdtype)\n\u001b[0;32m   1200\u001b[0m ):\n\u001b[1;32m-> 1201\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\n\u001b[0;32m   1202\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m: boolean label can not be used without a boolean index\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1203\u001b[0m     )\n\u001b[0;32m   1205\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, \u001b[39mslice\u001b[39m) \u001b[39mand\u001b[39;00m (\n\u001b[0;32m   1206\u001b[0m     \u001b[39misinstance\u001b[39m(key\u001b[39m.\u001b[39mstart, \u001b[39mbool\u001b[39m) \u001b[39mor\u001b[39;00m \u001b[39misinstance\u001b[39m(key\u001b[39m.\u001b[39mstop, \u001b[39mbool\u001b[39m)\n\u001b[0;32m   1207\u001b[0m ):\n\u001b[0;32m   1208\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m: boolean values can not be used in a slice\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'False: boolean label can not be used without a boolean index'"
+     ]
+    }
+   ],
+   "source": [
+    "chipo.loc[('item_name' == 'Barbacoa Salad Bowl')]"
+   ]
   },
   {
    "cell_type": "markdown",
