--- a/Data_Analysis/Analisis_de_datos/ch_02/ejercicios.ipynb
+++ b/Data_Analysis/Analisis_de_datos/ch_02/ejercicios.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -67,11 +67,11 @@
        "Index(['alert', 'cdi', 'code', 'detail', 'dmin', 'felt', 'gap', 'ids', 'mag',\n",
        "       'magType', 'mmi', 'net', 'nst', 'place', 'rms', 'sig', 'sources',\n",
        "       'status', 'time', 'title', 'tsunami', 'type', 'types', 'tz', 'updated',\n",
-       "       'url', 'parsed_place', 'fire_belt'],\n",
+       "       'url', 'parsed_place'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,86 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0                  9km NE of Aguanga, CA\n",
-       "1                  9km NE of Aguanga, CA\n",
-       "2                  8km NE of Aguanga, CA\n",
-       "3                  9km NE of Aguanga, CA\n",
-       "4                  10km NW of Avenal, CA\n",
-       "                      ...               \n",
-       "9327        9km ENE of Mammoth Lakes, CA\n",
-       "9328                 3km W of Julian, CA\n",
-       "9329    35km NNE of Hatillo, Puerto Rico\n",
-       "9330               9km NE of Aguanga, CA\n",
-       "9331               9km NE of Aguanga, CA\n",
-       "Name: place, Length: 9332, dtype: object"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['place']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "alert            object\n",
-       "cdi             float64\n",
-       "code             object\n",
-       "detail           object\n",
-       "dmin            float64\n",
-       "felt            float64\n",
-       "gap             float64\n",
-       "ids              object\n",
-       "mag             float64\n",
-       "magType          object\n",
-       "mmi             float64\n",
-       "net              object\n",
-       "nst             float64\n",
-       "place            object\n",
-       "rms             float64\n",
-       "sig               int64\n",
-       "sources          object\n",
-       "status           object\n",
-       "time              int64\n",
-       "title            object\n",
-       "tsunami           int64\n",
-       "type             object\n",
-       "types            object\n",
-       "tz              float64\n",
-       "updated           int64\n",
-       "url              object\n",
-       "parsed_place     object\n",
-       "fire_belt          bool\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +100,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 9332 entries, 0 to 9331\n",
-      "Data columns (total 28 columns):\n",
+      "Data columns (total 27 columns):\n",
       " #   Column        Non-Null Count  Dtype  \n",
       "---  ------        --------------  -----  \n",
       " 0   alert         59 non-null     object \n",
@@ -209,8 +130,7 @@
       " 24  updated       9332 non-null   int64  \n",
       " 25  url           9332 non-null   object \n",
       " 26  parsed_place  9332 non-null   object \n",
-      " 27  fire_belt     9332 non-null   bool   \n",
-      "dtypes: bool(1), float64(9), int64(4), object(14)\n",
+      "dtypes: float64(9), int64(4), object(14)\n",
       "memory usage: 1.9+ MB\n"
      ]
     }
@@ -221,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +192,6 @@
        "      <th>updated</th>\n",
        "      <th>url</th>\n",
        "      <th>parsed_place</th>\n",
-       "      <th>fire_belt</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -305,7 +224,6 @@
        "      <td>1539475395144</td>\n",
        "      <td>https://earthquake.usgs.gov/earthquakes/eventp...</td>\n",
        "      <td>California</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -336,7 +254,6 @@
        "      <td>1539475253925</td>\n",
        "      <td>https://earthquake.usgs.gov/earthquakes/eventp...</td>\n",
        "      <td>California</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -367,7 +284,6 @@
        "      <td>1539536756176</td>\n",
        "      <td>https://earthquake.usgs.gov/earthquakes/eventp...</td>\n",
        "      <td>California</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -398,7 +314,6 @@
        "      <td>1539475196167</td>\n",
        "      <td>https://earthquake.usgs.gov/earthquakes/eventp...</td>\n",
        "      <td>California</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -429,7 +344,6 @@
        "      <td>1539477547926</td>\n",
        "      <td>https://earthquake.usgs.gov/earthquakes/eventp...</td>\n",
        "      <td>California</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -471,15 +385,15 @@
        "3         ,geoserve,nearby-cities,origin,phase-data, -480.0  1539475196167   \n",
        "4  ,geoserve,nearby-cities,origin,phase-data,scit... -480.0  1539477547926   \n",
        "\n",
-       "                                                 url parsed_place  fire_belt  \n",
-       "0  https://earthquake.usgs.gov/earthquakes/eventp...   California      False  \n",
-       "1  https://earthquake.usgs.gov/earthquakes/eventp...   California      False  \n",
-       "2  https://earthquake.usgs.gov/earthquakes/eventp...   California      False  \n",
-       "3  https://earthquake.usgs.gov/earthquakes/eventp...   California      False  \n",
-       "4  https://earthquake.usgs.gov/earthquakes/eventp...   California      False  "
+       "                                                 url parsed_place  \n",
+       "0  https://earthquake.usgs.gov/earthquakes/eventp...   California  \n",
+       "1  https://earthquake.usgs.gov/earthquakes/eventp...   California  \n",
+       "2  https://earthquake.usgs.gov/earthquakes/eventp...   California  \n",
+       "3  https://earthquake.usgs.gov/earthquakes/eventp...   California  \n",
+       "4  https://earthquake.usgs.gov/earthquakes/eventp...   California  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +414,7 @@
        "       'mwb', nan], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +434,7 @@
        "dtype('O')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,16 +445,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 1. Encuentre el percentil 95 de la magnitud del terremoto en Japón usando el mb tipo de magnitud.\n",
+    "\n",
     "data_jap = data.loc[(data['parsed_place']== 'Japan') & (data.magType == 'mb')]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +650,7 @@
        "max     1.400000  451.000000  1.539449e+12      0.0  600.000000  1.539533e+12  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,47 +661,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'list' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\laura\\Desktop\\DS_PT_09_2023\\Data_Analysis\\Analisis_de_datos\\ch_02\\ejercicios.ipynb Cell 14\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/laura/Desktop/DS_PT_09_2023/Data_Analysis/Analisis_de_datos/ch_02/ejercicios.ipynb#X31sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m data_jap[[data_jap\u001b[39m.\u001b[39;49mdescribe(percentiles\u001b[39m=\u001b[39;49m[\u001b[39m0.05\u001b[39;49m, \u001b[39m0.95\u001b[39;49m])]\u001b[39m-\u001b[39;49m\u001b[39m2\u001b[39;49m:\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][[\u001b[39m'\u001b[39m\u001b[39mmag\u001b[39m\u001b[39m'\u001b[39m]]\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'int'"
-     ]
+     "data": {
+      "text/plain": [
+       "147"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_jap[-2:-1][['mag']]\n",
-    "# cómo hallar el valor sin tener que guardar variables"
+    "# 2. Encuentra el porcentaje de terremotos en Indonesia que fueron acompañados de tsunamis.\n",
+    "\n",
+    "indo = data.loc[(data['parsed_place'] == 'Indonesia')]['tsunami'].count()\n",
+    "indo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "indo = data.loc[(data['parsed_place'] == 'Indonesia')]['tsunami'].count()"
+    "indo_tsunami = data.loc[(data['parsed_place'] == 'Indonesia') & (data['tsunami']== 1),]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "indo_tsunami = data.loc[(data['parsed_place'] == 'Indonesia') & (data['tsunami']== 1),]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +702,7 @@
        "23.12925170068027"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +917,7 @@
        "max    1.539483e+12  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +950,7 @@
        "Name: parsed_place, Length: 9332, dtype: object"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +992,7 @@
        "Name: fire_belt, Length: 9332, dtype: bool"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1015,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1130,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1047,7 @@
        "(43, 3)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1070,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1090,7 @@
        "43"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
